[gd_scene load_steps=43 format=3 uid="uid://dphf6444t5t32"]

[ext_resource type="Script" path="res://Script/Character/Main_player/basic_player_mechanics.gd" id="1_ijqm5"]
[ext_resource type="PackedScene" uid="uid://bwx8n7vref23e" path="res://Scene/Characters/Main_player/Inventory/Inventroy.tscn" id="1_t7rrf"]
[ext_resource type="Texture2D" uid="uid://d3h0qthhohjiw" path="res://Sprite/placeholder/Cute_Fantasy_Free/Player/Player.png" id="2_q8q12"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8ld86"]
radius = 7.0
height = 22.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mtpqh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kri3h"]
atlas = ExtResource("2_q8q12")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4ejy"]
atlas = ExtResource("2_q8q12")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk0cx"]
atlas = ExtResource("2_q8q12")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5obw"]
atlas = ExtResource("2_q8q12")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yibe8"]
atlas = ExtResource("2_q8q12")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nees"]
atlas = ExtResource("2_q8q12")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5e34"]
atlas = ExtResource("2_q8q12")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbqhu"]
atlas = ExtResource("2_q8q12")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3ahk"]
atlas = ExtResource("2_q8q12")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4f1v3"]
atlas = ExtResource("2_q8q12")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmqvq"]
atlas = ExtResource("2_q8q12")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0hs1"]
atlas = ExtResource("2_q8q12")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_27ewp"]
atlas = ExtResource("2_q8q12")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_257l1"]
atlas = ExtResource("2_q8q12")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tc54x"]
atlas = ExtResource("2_q8q12")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_833vj"]
atlas = ExtResource("2_q8q12")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_erlnp"]
atlas = ExtResource("2_q8q12")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r53d4"]
atlas = ExtResource("2_q8q12")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pj2so"]
atlas = ExtResource("2_q8q12")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rs5da"]
atlas = ExtResource("2_q8q12")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s47sn"]
atlas = ExtResource("2_q8q12")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7258"]
atlas = ExtResource("2_q8q12")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hops"]
atlas = ExtResource("2_q8q12")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_28wqj"]
atlas = ExtResource("2_q8q12")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv32p"]
atlas = ExtResource("2_q8q12")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ky17m"]
atlas = ExtResource("2_q8q12")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv71v"]
atlas = ExtResource("2_q8q12")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxph2"]
atlas = ExtResource("2_q8q12")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnenk"]
atlas = ExtResource("2_q8q12")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_23sbc"]
atlas = ExtResource("2_q8q12")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3usl"]
atlas = ExtResource("2_q8q12")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtbc1"]
atlas = ExtResource("2_q8q12")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mvix"]
atlas = ExtResource("2_q8q12")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynkdw"]
atlas = ExtResource("2_q8q12")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0shy"]
atlas = ExtResource("2_q8q12")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r41b2"]
atlas = ExtResource("2_q8q12")
region = Rect2(160, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_mge7q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kri3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4ejy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk0cx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5obw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yibe8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nees")
}],
"loop": true,
"name": &"idle_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5e34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbqhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3ahk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4f1v3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmqvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0hs1")
}],
"loop": true,
"name": &"idle_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_27ewp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_257l1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tc54x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_833vj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_erlnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r53d4")
}],
"loop": true,
"name": &"idle_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pj2so")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rs5da")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s47sn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7258")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hops")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28wqj")
}],
"loop": true,
"name": &"walk_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv32p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ky17m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv71v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxph2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnenk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23sbc")
}],
"loop": true,
"name": &"walk_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3usl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtbc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mvix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynkdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0shy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r41b2")
}],
"loop": true,
"name": &"walk_side",
"speed": 5.0
}]

[node name="Player2" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_ijqm5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("CapsuleShape2D_8ld86")

[node name="Inventory" parent="." instance=ExtResource("1_t7rrf")]

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 6)
shape = SubResource("CapsuleShape2D_mtpqh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mge7q")
animation = &"walk_back"
frame_progress = 0.146094

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
